[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "ls"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
ls = "ls.__main__:main"

[tool.kedro]
package_name = "ls"
project_name = "ls"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "ls.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
